# visol

./: .gitignore  Cargo.toml  Makefile  README.md  TODO
resources/: com.rvburke.visol.desktop  makesplash.py  resources.xml  win32_installer_defines.wxi  win32_installer_visol.wxs
scripts/: cargo.sh  release.sh
src/: appstate.rs  config.rs  main.rs  parsers.rs  utils.rs  window.rs
src/data/: test.re2  test.res  test2019.res
src/graphs/: histocomponentes.rs  histoconceptos.rs  histomeses.rs  horarioszona.rs  mod.rs  piechart.rs
src/parsers/: bin.rs  mod.rs  res.rs  resqueries.rs  types.rs
src/res/: about.ui  filechooser.ui  main.ui  sol.ui  visol.cfg
