[package]
name = "visol"
version = "5.0.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2018"
homepage = "https://www.rvburke.com/visorlider.html"
repository = "https://github.com/pachi/visol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.9", features = ["png"] }
chrono = "0.4"
encoding = "0.2"
gtk = { version = "0.9", features = ["v3_16"] }
gdk = "0.13"
gdk-pixbuf = "0.9"
gio = { version = "0.9", features = ["v2_44"]}
glib = { version = "0.10.1" }
itertools = "0.10"
pango = "0.9"
pangocairo = "0.10"